--- a/src/Soenneker.Stripe.PaymentIntents.csproj
+++ b/src/Soenneker.Stripe.PaymentIntents.csproj
@@ -14,7 +14,7 @@
         <AssemblyName>Soenneker.Stripe.PaymentIntents</AssemblyName>
         <PackageId>Soenneker.Stripe.PaymentIntents</PackageId>
         <PackageTags>stripe paymentintents customer payment methods intents util api stripepaymentintentsutil csharp dotnet c# .net</PackageTags>
-        <Copyright>Copyright © 2024 Jake Soenneker</Copyright>
+        <Copyright>Copyright © 2024-2025 Jake Soenneker</Copyright>
         <Authors>Jake Soenneker</Authors>
         <Company>https://soenneker.com</Company>
         <GenerateDocumentationFile>true</GenerateDocumentationFile>
